--- a/lesson3/style.css
+++ b/lesson3/style.css
@@ -1,17 +1,17 @@
 body {
-    background-color: black;
+    background-color: black; 
 }
 p, h1 {
     font-family: 'VT323', monospace;
     font-size: 2em;
-    color: rgb(0, 255, 0);  
+    color: rgb(0, 255, 0); 
 }
 
 h1 {
     font-size: 5em;
 }
 
-#sec-input, #start-button {
+#sec-input {
     background-color: black;
     font-size: 1em;
     color: rgb(0, 255, 0);
@@ -19,17 +19,32 @@ h1 {
     font-family: 'VT323', monospace;
 }
 
+
+#start-button {
+    background-color: rgb(0, 255, 0);
+    color: black;
+    border-color: black;
+}
+
+#start-button:hover {
+    color: rgb(0, 255, 0);
+    zoom: 120%;
+    background-color: black;
+    border-color: rgb(0, 255, 0);
+    transition: 1s;
+}
+
 #time-window {
-    
     font-size: 3em;
     border-color: rgb(0, 255, 0);
-    color: rgb(0, 255, 0);
     font-family: 'VT323', monospace;
     width: 50px;
+    color: rgb(0, 255, 0); 
 }
 
 #sec-input::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
     color: rgb(0, 255, 0);
+    font-size: 1.2em;
 }
 
 #my-form {
